--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <html lang="en">
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="index.css" />
     <title>Text to Speech</title>
   </head>
   <body class="container mt-5 bg-dark">
     <h1 class="text-light">Text to Speech</h1>
-    <p class="lead text-light mt-5">Select Voice</p>
+    <p class="lead text-light mt-4">Select Voice</p>
     <select id="voices" class="form-select bg-secondary text-light"></select>
+    <div class="d-flex mt-4 text-light">
+      <div>
+        <p class="lead">Volume</p>
+        <input type="range" min="0" max="1" value="1" step="0.1" id="volume" />
+        <span id="volume-label" class="ms-2">1</span>
+      </div>
+      <div class="mx-5">
+        <p class="lead">Rate</p>
+        <input type="range" min="0.1" max="10" value="1" id="rate" step="0.1" />
+        <span id="rate-label" class="ms-2">1</span>
+      </div>
+      <div>
+        <p class="lead">Pitch</p>
+        <input type="range" min="0" max="2" value="1" step="0.1" id="pitch" />
+        <span id="pitch-label" class="ms-2">1</span>
+      </div>
+    </div>
     <textarea class="form-control bg-dark text-light mt-5" cols="30" rows="10" placeholder="Type here..."></textarea>
-    <button id="start" class="btn btn-success mt-5">Start</button>
-    <button id="pause" class="btn btn-warning mt-5">Pause</button>
-    <button id="resume" class="btn btn-info mt-5">Resume</button>
-    <button id="cancel" class="btn btn-danger mt-5">Cancel</button>
+    <div class="mb-5">
+      <button id="start" class="btn btn-success mt-5 me-3">Start</button>
+      <button id="pause" class="btn btn-warning mt-5 me-3">Pause</button>
+      <button id="resume" class="btn btn-info mt-5 me-3">Resume</button>
+      <button id="cancel" class="btn btn-danger mt-5 me-3">Cancel</button>
+    </div>
   </body>
-  <script src="./index.js"></script>
+  <!-- script tag goes here -->
+  <script src="./textToSpeech.js"></script>
 </html>
