Add charset meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <title>Text to Speech</title>
+    <meta charset="UTF-8">
   </head>
   <body class="container mt-5 bg-dark">
     <h1 class="text-light">Text to Speech</h1>
